fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC02ImpBudgetRule.dsl
 test 1 キャンペーン:
    2018/11/10 00:12:34:
        impEvent:
            media: "yss"              # 媒体
            accountId: 1000           # アカウントID
            network: "Search"
            displays: 1
            searchs: 2
            campaignName: "camp02"
            campaignId: 02
        inspect:
             holderState.currentState == "over":
